<resources>
    <string name="app_name">ProyectoEstructurasDeDatos</string>

    <string name="registro1Title">Registro de Usuarios</string>
    <string name="registro1CuentaTitle">Crear una cuenta</string>
    <string name="DatoCorreo">Dirección de Correo Electrónico</string>
    <string name="DatoContra">Contraseña</string>
    <string name="registro1TipoCuentaTitle">Tipo de Cuenta</string>
    <string name="registro1NormalRadio">Usuario Normal</string>
    <string name="registro1AdminRadio">Usuario Administrador</string>
    <string name="registro1ContinuaButton">Continuar</string>

    <string name="DatoNombre">Nombre</string>
    <string name="DatoApellido">Apellido</string>
    <string name="DatoFechadeNacimiento">Fecha de Nacimiento</string>
    <string name="SI">Sí</string>
    <string name="NO">No</string>
    <string name="Documento">Número de documento de identificación</string>
    <string name="registroDiscapcidad">Discapacidad</string>
    <string name="registroFinalizar">Finalizar registro</string>

    <string name="ingreseDocumento">Ingrese el número de documento del usuario que desea consultar</string>
    <string name="informacionUsuario">Información del usuario</string>
    <string name="consultarUsuario">Consultar usuario</string>
    <string name="irGestionColas">Gestionar Colas</string>
    <string name="crearCola">Crear cola</string>
    <string name="actualizarCola">Actualizar Cola</string>
    <string name="desencolar">Desencolar</string>

    <string name="DatosInicio">Datos de Inicio</string>
    <string name="InicioSesion">Iniciar Sesión</string>
    <string name="RegistroSesion">Registrarse</string>

    <string name="NoLista">No hay nadie en la cola</string>
    <string name="NoListaSuggest">Intenta crear una</string>
    <string name="ErrorLista">Ha ocurrido un error con la cola</string>
    <string name="CargandoLista">Cargando cola...</string>

    <string name="DatoDocumento">Documento</string>
    <string name="PosCola">##</string>

    <string name="enterCola">Entrar a la cola</string>
    <string name="enterCita">Reservar una cita</string>
    <string name="noFilaPos">Aún no estás en la cola</string>
    <string name="documentoUsuarioInstantaneo">Ingrese el documento del usuario</string>

    <string name="registroNew">¿Sin cuenta? Registrate oprimiendo aquí</string>
</resources>
